# apps.core.preloaded.starter

./: CMakeLists.txt  project.config  rd3starter  rd4starter  starter  starter.efl
include/: dbus_util.h  status.h  util.h  window_mgr.h
include/common/: home_mgr.h  hw_key.h
include/ivi/: lock_mgr.h  starter.h
include/mobile/: home_mgr.h  hw_key.h  lock_mgr.h  lock_pwd_complex.h  lock_pwd_control_panel.h  lock_pwd_simple.h  lock_pwd_util.h  lock_pwd_verification.h
include/wearable/: hw_key.h
lock-setting/po/: CMakeLists.txt
packaging/: .starter.spec.swp  starter-pre.service  starter.changes  starter.path  starter.service  starter.spec  wait-lock.service
po/: ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  mn_MN.po  nb.po  (+20 more)
res/edje/: CMakeLists.txt
res/edje/mobile/: CMakeLists.txt  lock_btn.edc  lock_pwd.edc  lock_pwd_complex.edc  lock_pwd_simple.edc
src/: dbus_util.c  hw_key.c  lock-daemon.c  lockd-window-mgr.c  menu_daemon.c  pkg_event.c  process_mgr.c  starter.c  status.c  x11.c  xmonitor.c
src/common/: home_mgr.c  hw_key.c  lock_mgr.c  starter.c  window_mgr.c
src/ivi/: hw_key.c  popup.c  starter.c  window_mgr.c
src/mobile/: home_mgr.c  hw_key.c  lock_mgr.c  lock_pwd_complex.c  lock_pwd_control_panel.c  lock_pwd_simple.c  lock_pwd_util.c  lock_pwd_verification.c  popup.c  starter.c  window_mgr.c
src/wearable/: clock_mgr.c  home_mgr.c  hourly_alert.c  hw_key.c  starter.c
